--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
         <build-plugin.jacoco.version>0.7.9</build-plugin.jacoco.version>
         <image_version>latest</image_version>
         <jib.version>1.4.0</jib.version>
+
+        <registry.host>192.168.1.108:5000</registry.host>
     </properties>
 
     <dependencies>
@@ -186,6 +188,10 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -213,8 +219,13 @@
         </resources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <forkCount>0</forkCount>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
