--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <junit.jupiter.version>5.2.0</junit.jupiter.version>
         <junit.vintage.version>5.2.0</junit.vintage.version>
         <junit.platform.version>1.2.0</junit.platform.version>
-        <poi.version>3.17</poi.version>
+        <poi.version>5.2.1</poi.version>
         <wiremock.version>2.17.0</wiremock.version>
         <!-- Jacoco 插件版本 -->
         <build-plugin.jacoco.version>0.7.9</build-plugin.jacoco.version>
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <version>2.11.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -162,7 +162,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.5</version>
+            <version>8.0.28</version>
         </dependency>
         <dependency>
             <groupId>org.dom4j</groupId>
@@ -198,12 +198,12 @@
             <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
-                <version>2.8.4</version>
+                <version>2.9.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
-                <version>20.0</version>
+                <version>31.1-jre</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -249,7 +249,7 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.3</version>
+                <version>1.5.7</version>
                 <executions>
                     <execution>
                         <id>generate-docs</id>
