升级依赖，修改单元测试

--- a/src/main/resources/application-h2.yml
+++ b/src/main/resources/application-h2.yml
@@ -4,7 +4,9 @@ spring:
     username: ${dataSource.user:sa}
     password: ${dataSource.password:123456}
     driver-class-name: org.h2.Driver
-    schema: classpath:db/schema.sql
   jpa:
     hibernate:
       ddl-auto: create
+  sql:
+    init:
+      schema-locations: classpath:db/schema.sql
