--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,10 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jersey</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
