--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <jib.version>1.8.0</jib.version>
         <jacocoArgLine></jacocoArgLine>
         <registry.host>192.168.1.108:5000</registry.host>
+        <mainClass>xiaobo9.message.MessageApplication</mainClass>
     </properties>
 
     <dependencies>
@@ -238,7 +239,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>xiaobo9.message.MessageApplication</mainClass>
+                    <mainClass>${mainClass}</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -280,7 +281,7 @@
                     </to>
                     <allowInsecureRegistries>true</allowInsecureRegistries>
                     <container>
-                        <mainClass>xiaobo9.message.MessageApplication</mainClass>
+                        <mainClass>${mainClass}</mainClass>
                         <appRoot>/app</appRoot>
                         <useCurrentTimestamp>true</useCurrentTimestamp>
                     </container>
